--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,10 @@ classifiers = [
     "Topic :: Software Development :: Debuggers",
 ]
 dependencies = [
-    "requests>=2.32.2",
     "defusedxml>=0.7.1",
     "lief>=0.16.0",
+    "pyyaml~=6.0",
+    "requests>=2.32.2",
 ]
 
 [project.scripts]
