--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -21,6 +21,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - run: pip install hatch hatch-vcs
-    - run: hatch run lint
-    - run: hatch run +py=${{ matrix.python-version }} test:cov  # matches entries in pyproject.toml
+    - run: pipx install hatch
+    - run: hatch fmt --check
+    - run: hatch test +py=${{ matrix.python-version }} --cover  # matches entries in pyproject.toml
