--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -1,4 +1,4 @@
-name: Lint and Test Job
+name: Test & Coverage
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   lint-and-test:
-    name: Lint and Test on Python ${{ matrix.python-version }}
+    name: Test & Coverage on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
