--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,16 +6,13 @@ on:
   pull_request:
 
 jobs:
-  test-and-coverage:
-    uses: ./.github/workflows/test-and-coverage.yml
-
   build:
     uses: ./.github/workflows/build.yml
 
   publish-to-pypi:
     name: Publish Python 🐍 distribution 📦 to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-    needs: [test-and-coverage, build]
+    needs: [build]
     runs-on: ubuntu-latest
     environment:
       name: pypi
