--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Python 🐍 distribution
+name: 🐍📦
 
 on: workflow_call
 
@@ -15,10 +15,8 @@ jobs:
       with:
         python-version: "3.x"
     - run: pipx install hatch
-    - name: Build a binary wheel and a source tarball
-      run: hatch build
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v4
+    - run: hatch build
+    - uses: actions/upload-artifact@v4
       with:
         name: python-package-distributions
         path: dist/
