--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -2,11 +2,10 @@ name: Test & Coverage
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+    tags: [v*]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   lint-and-test:
@@ -19,8 +18,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         persist-credentials: false
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - run: pipx install hatch
