--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,19 +1,19 @@
 name: Publish to PyPI and TestPyPI
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Test & Coverage"]
     branches: [main]
-    tags: [v*]
-  pull_request:
+    types: [completed]
 
 jobs:
   build:
     uses: ./.github/workflows/build.yml
 
   publish-to-pypi:
-    name: Publish distribution to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs: [build]
+    name: Publish distribution to PyPI
+    if: github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     runs-on: ubuntu-latest
     environment:
       name: release
@@ -28,8 +28,8 @@ jobs:
     - uses: pypa/gh-action-pypi-publish@release/v1
 
   publish-to-testpypi:
-    name: Publish distribution to TestPyPI
     needs: [build]
+    name: Publish distribution to TestPyPI
     runs-on: ubuntu-latest
     environment:
       name: testpypi
@@ -47,8 +47,8 @@ jobs:
         skip-existing: true
 
   github-release:
-    name: Sign with Sigstore and upload to GitHub Release
     needs: [publish-to-pypi]
+    name: Sign with Sigstore and upload to GitHub Release
     runs-on: ubuntu-latest
     permissions:
       contents: write  # IMPORTANT: mandatory for making GitHub Releases
