chore: update workflow_run event to listen to tags

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI and TestPyPI
 on:
   workflow_run:
     workflows: ["Test & Coverage"]
-    branches: [main]
+    branches: [main,v*]
     types: [completed]
 
 jobs:
