--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI and TestPyPI
 on:
   workflow_run:
     workflows: ["Test & Coverage"]
-    branches: [main,v*]
+    branches: [v*]
     types: [completed]
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
   publish-to-pypi:
     needs: [build]
     name: Publish distribution to PyPI
-    if: github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     environment:
       name: release
