--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
   publish-to-pypi:
     needs: [build]
     name: Publish distribution to PyPI
-    if: github.event.workflow_run.conclusion == 'success'
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     environment:
       name: release
